--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>PNX BOT</title>
       <meta http-equiv = "refresh" content = "2; url = https://discord.com/oauth2/authorize?client_id=737378899448692737&scope=bot&permissions=66061584" />
    </head>
    <body>
