--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "2; url = https://discord.com/oauth2/authorize?client_id=737378899448692737&scope=bot&permissions=66061584" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <p>Lütfe 2 saniye bekleyin!</p>
    </body>
 </html>
